--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SKIP_PREFLIGHT_CHECK="true"
 VITE_MOBILE_BREAKPOINT_SIZE="768"
 VITE_ASIDE_MINIMIZE_BREAKPOINT_SIZE="1024"
 VITE_META_DESC="React Admin Dashboard Template"
-
+VITE_API_URL=https://localhost:44336/api
 VITE_MODERN_DESGIN="false"
 VITE_ASIDE_TOUCH_STATUS="true"
 
