--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_MOBILE_BREAKPOINT_SIZE="768"
 VITE_ASIDE_MINIMIZE_BREAKPOINT_SIZE="1024"
 VITE_META_DESC="React Admin Dashboard Template"
 VITE_API_URL=https://localhost:44336/api
-VITE_MODERN_DESGIN="false"
+VITE_MODERN_DESGIN="true"
 VITE_ASIDE_TOUCH_STATUS="true"
 
 VITE_DARK_MODE="false"
@@ -11,7 +11,8 @@ VITE_DARK_MODE="false"
 VITE_ASIDE_WIDTH_PX="195"
 VITE_SPACER_PX="13"
 
-VITE_PRIMARY_COLOR="#6c5dd3"
+# VITE_PRIMARY_COLOR="#6c5dd3"
+VITE_PRIMARY_COLOR="#2596be"
 VITE_SECONDARY_COLOR="#ffa2c0"
 VITE_SUCCESS_COLOR="#46bcaa"
 VITE_INFO_COLOR="#4d69fa"
