--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"devextreme": "^23.1.3",
 		"devextreme-aspnet-data-nojquery": "^5.0.0",
 		"devextreme-react": "^23.1.3",
+		"exceljs": "^4.4.0",
+		"file-saver": "^2.0.5",
 		"formik": "^2.4.6",
 		"framer-motion": "^11.11.9",
 		"i18next": "^23.16.3",
@@ -80,6 +82,7 @@
 		"@eslint/compat": "^1.2.1",
 		"@eslint/js": "^9.13.0",
 		"@svgr/cli": "^8.1.0",
+		"@types/file-saver": "^2.0.7",
 		"@types/pascalcase": "^1.0.3",
 		"@types/prismjs": "^1.26.5",
 		"@types/react-big-calendar": "^1.8.12",
